force-app/main/default/objects/VideoPromptScriptParameter__c/VideoPromptScriptParameter__c.object-meta.xml
<CustomObject>
    <description>Stores the fields for the input parameters of  DealDawgPromptTemplate</description>
    <label>VideoPromptScriptParameter</label>
    <nameField>
        <label>VideoPromptScriptParameters Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VideoPromptScriptParameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>