force-app/main/default/objects/VideoPromptScriptParameter__c/fields/closingOpportunity__c.field-meta.xml
<CustomField>
    <fullName>closingOpportunity__c</fullName>
    <description>Closing Opporuntiy</description>
    <label>closingOpportunity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>