force-app/main/default/objects/VideoPromptScriptParameter__c/fields/closingOpportunityAmount__c.field-meta.xml
<CustomField>
    <fullName>closingOpportunityAmount__c</fullName>
    <label>closingOpportunityAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>