force-app/main/default/objects/VideoPromptScriptParameter__c/fields/firstMeetingSubject__c.field-meta.xml
<CustomField>
    <fullName>firstMeetingSubject__c</fullName>
    <description>Stores meeting subject</description>
    <label>firstMeetingSubject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>