force-app/main/default/objects/VideoPromptScriptParameter__c/fields/firstMeetingTime__c.field-meta.xml
<CustomField>
    <fullName>firstMeetingTime__c</fullName>
    <description>Meeting time</description>
    <label>firstMeetingTime</label>
    <length>255</length>
    <type>Text</type>
</CustomField>