force-app/main/default/objects/VideoPromptScriptParameter__c/fields/hotLeadCompany__c.field-meta.xml
<CustomField>
    <fullName>hotLeadCompany__c</fullName>
    <description>Hot lead company name</description>
    <label>hotLeadCompany</label>
    <length>255</length>
    <type>Text</type>
</CustomField>