force-app/main/default/objects/VideoPromptScriptParameter__c/fields/hotLeadName__c.field-meta.xml
<CustomField>
    <fullName>hotLeadName__c</fullName>
    <description>Hot lead Name</description>
    <label>hotLeadName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>