force-app/main/default/objects/VideoPromptScriptParameter__c/fields/keyAccountHealth__c.field-meta.xml
<CustomField>
    <fullName>keyAccountHealth__c</fullName>
    <description>Healthscore value</description>
    <label>keyAccountHealth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>