force-app/main/default/objects/VideoPromptScriptParameter__c/fields/keyAccountName__c.field-meta.xml
<CustomField>
    <fullName>keyAccountName__c</fullName>
    <label>keyAccountName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>