force-app/main/default/objects/VideoPromptScriptParameter__c/fields/lostDealName__c.field-meta.xml
<CustomField>
    <fullName>lostDealName__c</fullName>
    <description>Lost Opp Name</description>
    <label>lostDealName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>