force-app/main/default/objects/VideoPromptScriptParameter__c/fields/lostReason__c.field-meta.xml
<CustomField>
    <fullName>lostReason__c</fullName>
    <label>lostReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>