force-app/main/default/objects/VideoPromptScriptParameter__c/fields/meetingCount__c.field-meta.xml
<CustomField>
    <fullName>meetingCount__c</fullName>
    <description>Meeting count number</description>
    <label>meetingCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>