force-app/main/default/objects/VideoPromptScriptParameter__c/fields/pendingTaskCount__c.field-meta.xml
<CustomField>
    <fullName>pendingTaskCount__c</fullName>
    <description>Stores the count of pending open tasks</description>
    <label>pendingTaskCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>