force-app/main/default/objects/VideoPromptScriptParameter__c/fields/taskExample__c.field-meta.xml
<CustomField>
    <fullName>taskExample__c</fullName>
    <description>Stores the task subject sample</description>
    <label>taskExample</label>
    <length>255</length>
    <type>Text</type>
</CustomField>